# example-format

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: de.rs  error.rs  lib.rs  ser.rs
