[package]
name = "serde-example"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An example Serializer and Deserializer data format for Serde"
repository = "https://github.com/serde-rs/example-format"
documentation = "https://serde.rs/data-format.html"
keywords = ["serde"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
