[package]
name = "serde-example"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding"]
description = "An example Serializer and Deserializer data format for Serde"
documentation = "https://serde.rs/data-format.html"
edition = "2021"
keywords = ["serde"]
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/serde-rs/example-format"
rust-version = "1.68"

[dependencies]
serde_core = "1"

[dev-dependencies]
serde = "1"
serde_derive = "1"
